# Purposeful-Audio-Transcription

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cloud  Dockerfile.ui  README.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy-dev.yml  eval-release-gates.yml  frontend-react.yml  pause-dev.yml  supply-chain.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_transcript_preparation.py  003_module_validation_warnings.py  004_run_telemetry.py  005_normalized_findings.py  006_normalized_constructs.py  007_construct_relationships.py  008_cases.py  009_finding_feedback.py  010_workflow_job_control.py  011_safety_mode.py  012_safety_events_evaluation_runs.py
backend/: main.py  worker.py
backend/api/: middleware.py  schemas.py
backend/core/: audit.py  device.py  exceptions.py  log_context.py  log_sanitize.py  logging_config.py  module_registry.py  ontology_registry.py  purpose_registry.py  workflow_dag.py  workflow_registry.py
backend/db/: base.py  migrations.py  models.py
backend/domain/: case.py  enums.py  finding.py  synthesis.py  telemetry.py  transcript.py  workflow.py
backend/evaluation/: __init__.py  claims.py  harness.py  reports.py
backend/repositories/: case_repository.py  construct_repository.py  evaluation_run_repository.py  finding_feedback_repository.py  (+7 more)
config/: purposes.yaml  settings.py
doc/: 01_product_vision_and_scope.md  03_domain_model.md  05_data_model_and_schemas.md  06_analysis_modules.md  07_prompt_compiler.md  08_workflow_engine.md  12_mvp_build_plan.md  14_testing_evaluation_and_safety.md  15_future_roadmap.md  17_mvp_implementation_plan.md  18_post_v0.3_plan.md  DEPLOYMENT.md  MODEL_SETUP.md  README.md  implementation_plan.md
docs/: README.md
frontend-react/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: aws-deploy-smoke.sh  check_no_pycache.py  check_prerequisites.py  check_terraform_fmt.py  check_ui_api_boundary.py  create_release.ps1  decode-oidc-claims.py  ecs-clear-before-deploy.py  export_openapi.py  p1_4f_burnin.py  poll_workflow_run.py  run_dev.ps1  run_golden_eval.py  run_venv.py  setup_gh.ps1  validate_config.py  validate_yaml.py  wait-ecs-stable.py
tests/: conftest.py  test_analyze_deprecation.py  test_api_client.py  test_api_key_auth.py  test_audio_slicing.py  test_audio_transcription.py  test_bedrock_provider.py  test_cases.py  test_construct_persistence.py  test_convergence_scoring.py  test_custom_workflow.py  test_device.py  test_diarization_audio.py  test_diarization_timeline.py  test_error_contract.py  test_evidence_index.py  test_exploration.py  test_finding_feedback.py  test_finding_persistence.py  test_golden_construct_coverage.py  test_golden_evidence_index.py  test_golden_expected_assertions.py  test_golden_fixture_loading.py  test_golden_module_contracts.py  test_golden_transcripts.py  test_golden_workflow_smoke.py  test_graph_merge.py  test_log_sanitize.py  test_logging_context.py  test_longitudinal_compare.py  test_longitudinal_synthesis.py  test_main_startup.py  test_module_output_validator.py  test_module_registry.py  test_module_runner.py  test_module_stream.py  test_modules_api.py  test_ollama_service.py  test_ontology_registry.py  test_output_parser.py  (+32 more)
ui/: api_client.py  streamlit_app.py
(+316 files in other folders)
