[project]
name = "purposeful-audio-transcription"
version = "0.5.1"
description = "Relationship Reasoning Engine — AWS Bedrock + Transcribe transcript analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "boto3>=1.35",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "fpdf2>=2.8",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "streamlit>=1.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "config", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
