[project]
name = "purposeful-audio-transcription"
version = "0.6.0"
description = "Relationship Reasoning Engine — AWS Bedrock + Transcribe transcript analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "boto3>=1.35",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "fpdf2>=2.8",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "streamlit>=1.40",
    "pre-commit>=4.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "config", "ui", "tests", "scripts"]

[tool.ruff.lint]
# Start strict on crash/unused-import class; widen select once churn is absorbed.
select = ["E9", "F401"]
ignore = []


[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"scripts/**" = ["E402"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "config", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits live AWS / external services (not default CI)",
    "golden: golden transcript evaluation (mocked by default; live when RUN_LIVE_GOLDEN_TESTS=1)",
    "live_model: tests that call a real LLM provider",
    "slow: tests that may take longer than typical unit tests",
]
